cases/fiasco_17_10/build_error_investigations/with_errors/1/processed/63.config.out
  ... Making cpu-arm.o
  ... Making cpu-arm-hyp.o
  ... Making cpu-arm-32.o
  ... Making entry_frame.o
  ... Making entry_frame-arm.o
  ... Making entry_frame-abs-timeout-hack.o
  ... Making kernel_console.o
  ... Making ipc_gate.o
  ... Making task.o
  ... Making task-arm.o
  ... Making sigma0_task.o
  ... Making kernel_task.o
  ... Making kernel_task-arm.o
  ... Making platform_control_object.o
  ... Making irq_controller.o
  ... Making irq_chip.o
  ... Making irq_mgr.o
  ... Making terminate.o
  ... Making continuation-arm.o
  ... Making timer_tick.o
  ... Making timer_tick-arm.o
  ... Making timer_tick-broadcast.o
/home/vagrant/fiasco_17_10/src/kernel/fiasco/src/kern/timer_tick-broadcast.cpp: In member function ‘void Timer_tick::ack()’:
/home/vagrant/fiasco_17_10/src/kernel/fiasco/src/kern/timer_tick-broadcast.cpp:59:14: error: ‘Timer’ is not a member of ‘Ipi’
   Ipi::bcast(Ipi::Timer, Cpu_number::boot_cpu());
              ^
/home/vagrant/fiasco_17_10/src/kernel/fiasco/src/Makerules.global:118: recipe for target 'timer_tick-broadcast.o' failed
make[2]: *** [timer_tick-broadcast.o] Error 1
make[2]: Leaving directory '/home/vagrant/fiasco_17_10/src/kernel/fiasco/build'
/home/vagrant/fiasco_17_10/src/kernel/fiasco/src/Makefile:153: recipe for target 'all' failed
make[1]: *** [all] Error 2
make[1]: Leaving directory '/home/vagrant/fiasco_17_10/src/kernel/fiasco/build'
Makefile:72: recipe for target 'build' failed
make: *** [build] Error 2

return code 2
